--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,13 @@
+html {
+  background: url('../static/images/BW Mountain.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
-  background: url('../static/images/BW Mountain.png') center/cover no-repeat fixed;
-  height: 100vh;
+  background: transparent;
 }
 
 h1 {
