--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   background: url('../static/images/BW Mountain.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -8,6 +8,27 @@ html {
 
 body {
   background: transparent;
+}*/
+
+#bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+}
+
+#bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  max-width: 50%;
+  max-height: 50%;
+  min-width: 50%;
+  min-height: 50%;
 }
 
 h1 {
@@ -122,6 +143,7 @@ a, a:hover, a:focus {
   font-size: 2vw;
   color: white;
   padding: 1%;
+  position: relative;
 }
 
 .project {
