Updated images to look clickable when hovered over

--- a/style/style.css
+++ b/style/style.css
@@ -1,15 +1,3 @@
-/*html {
-  background: url('../static/images/BW Mountain.png') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-body {
-  background: transparent;
-}*/
-
 #bg {
   position: fixed;
   top: -50%;
@@ -215,4 +203,8 @@ a, a:hover, a:focus {
   width: 25vw;
   padding: 1vw;
   display: inline-block;
+}
+
+.clickable:hover {
+  cursor: pointer;
 }
