Updated web project link photo

--- a/style/style.css
+++ b/style/style.css
@@ -117,12 +117,12 @@ a, a:hover, a:focus {
 }
 
 #Web {
-  background: url(../../static/images/web_gray.png) center/contain no-repeat;
+  background: url(../../static/images/web/gray_monitor.png) center/contain no-repeat;
   box-shadow: 9px 9px 9px #999;
 }
 
 #Web:hover {
-  background: url(../../static/images/web_blue.png) center/contain no-repeat;
+  background: url(../../static/images/web/blue_monitor.png) center/contain no-repeat;
   box-shadow: 9px 9px 9px #00d0ff;
 }
 
