--- a/style/style.css
+++ b/style/style.css
@@ -256,6 +256,7 @@ a, a:hover, a:focus {
 }
 
 .btn {
+  margin-bottom: .7rem;
   color: black;
   font-family: 'Allan', sans;
   font-size: 1.7rem;
