--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .container {
@@ -163,8 +163,9 @@ a, a:hover, a:focus {
     color: black;
     padding-top: 2em;
     margin: 0;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: bold;
+    font-size: 1.7rem;
     background: transparent;
     border: none;
 }
@@ -189,7 +190,7 @@ a, a:hover, a:focus {
 
 .projectlink ul li {
   color: black;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.5rem;
   text-align: left;
   margin: 1vh;
