--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .container {
@@ -155,6 +155,7 @@ a, a:hover, a:focus {
 
 .project h1 {
     font-family: 'Allan', cursive;
+    font-style: italic;
     color: black;
 }
 
@@ -162,9 +163,8 @@ a, a:hover, a:focus {
     color: black;
     padding-top: 2em;
     margin: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
-    font-size: 1.7rem;
     background: transparent;
     border: none;
 }
@@ -189,7 +189,7 @@ a, a:hover, a:focus {
 
 .projectlink ul li {
   color: black;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1.5rem;
   text-align: left;
   margin: 1vh;
@@ -225,8 +225,6 @@ a, a:hover, a:focus {
   color: white;
   text-decoration: none;
   font-size: 14px;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: bold;
 }
 
 .section-break {
